Database: Move Tables to Interfaces

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -216,6 +216,9 @@ set(INCLUDED_DIRECTORIES
 	"dDatabase"
 	"dDatabase/Tables"
 	"dDatabase/Databases"
+	"dDatabase/Databases/ITables"
+	"dDatabase/Databases/MySQL"
+	"dDatabase/Databases/MySQL/Tables"
 	"dNet"
 	"dScripts"
 	"dScripts/02_server"
