--- a/dDatabase/Databases/CMakeLists.txt
+++ b/dDatabase/Databases/CMakeLists.txt
@@ -1,4 +1,9 @@
-set(DDATABASE_DATABASES_SOURCES
-	"MySQLDatabase.cpp"
-	PARENT_SCOPE
-)
+set(DDATABASE_DATABASES_SOURCES)
+
+add_subdirectory(MySQL)
+
+foreach(file ${DDATABSE_DATABSES_MYSQL_SOURCES})
+	set(DDATABASE_DATABASES_SOURCES ${DDATABASE_DATABASES_SOURCES} "MySQL/${file}")
+endforeach()
+
+set(DDATABASE_DATABASES_SOURCES ${DDATABASE_DATABASES_SOURCES} PARENT_SCOPE)
