MySQL: Remove MySQL Specifier from table

--- a/dDatabase/Databases/MySQL/Tables/CMakeLists.txt
+++ b/dDatabase/Databases/MySQL/Tables/CMakeLists.txt
@@ -1,22 +1,22 @@
 set(DDATABASES_DATABASES_MYSQL_TABLES_SOURCES
-	"MySQLCommandLog.cpp"
-	"MySQLPlayerCheatDetections.cpp"
-	"MySQLMail.cpp"
-	"MySQLLeaderboard.cpp"
-	"MySQLObjectIdTracker.cpp"
-	"MySQLPlayKeys.cpp"
-	"MySQLServers.cpp"
-	"MySQLBugReports.cpp"
-	"MySQLPropertyContents.cpp"
-	"MySQLProperty.cpp"
-	"MySQLPetNames.cpp"
-	"MySQLCharXml.cpp"
-	"MySQLMigrationHistory.cpp"
-	"MySQLUgc.cpp"
-	"MySQLFriends.cpp"
-	"MySQLCharInfo.cpp"
-	"MySQLAccounts.cpp"
-	"MySQLActivityLog.cpp"
+	"Accounts.cpp"
+	"ActivityLog.cpp"
+	"BugReports.cpp"
+	"CharInfo.cpp"
+	"CharXml.cpp"
+	"CommandLog.cpp"
+	"Friends.cpp"
+	"Leaderboard.cpp"
+	"Mail.cpp"
+	"MigrationHistory.cpp"
+	"ObjectIdTracker.cpp"
+	"PetNames.cpp"
+	"PlayerCheatDetections.cpp"
+	"PlayKeys.cpp"
+	"Property.cpp"
+	"PropertyContents.cpp"
+	"Servers.cpp"
+	"Ugc.cpp"
 	PARENT_SCOPE
 )
 
