Folders: Rename to GameDatabase

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,10 +215,10 @@ set(INCLUDED_DIRECTORIES
 	"dZoneManager"
 	"dDatabase"
 	"dDatabase/Tables"
-	"dDatabase/Databases"
-	"dDatabase/Databases/ITables"
-	"dDatabase/Databases/MySQL"
-	"dDatabase/Databases/MySQL/Tables"
+	"dDatabase/GameDatabase"
+	"dDatabase/GameDatabase/ITables"
+	"dDatabase/GameDatabase/MySQL"
+	"dDatabase/GameDatabase/MySQL/Tables"
 	"dNet"
 	"dScripts"
 	"dScripts/02_server"
