--- a/dDatabase/CMakeLists.txt
+++ b/dDatabase/CMakeLists.txt
@@ -1,12 +1,9 @@
-set(DDATABASE_SOURCES "CDClientDatabase.cpp"
-		"CDClientManager.cpp"
-		"Database.cpp"
-		"MigrationRunner.cpp")
+set(DDATABASE_SOURCES)
 
-add_subdirectory(Tables)
+add_subdirectory(CDClientDatabase)
 
-foreach(file ${DDATABASE_TABLES_SOURCES})
-	set(DDATABASE_SOURCES ${DDATABASE_SOURCES} "Tables/${file}")
+foreach(file ${DDATABASE_CDCLIENTDATABASE_SOURCES})
+	set(DDATABASE_SOURCES ${DDATABASE_SOURCES} "CDClientDatabase/${file}")
 endforeach()
 
 add_subdirectory(GameDatabase)
